# RETO-FINAL

./: FINAL_CHALLENGE_README.md  README.md
MiniChallenge6/: .gitignore
MiniChallenge6/puzzlebot_sim/: FINAL_CHALLENGE_README.md  package.xml  setup.py
MiniChallenge6/puzzlebot_sim/config/: final_challenge_params.yaml  marker_map.yaml  pentagon_params.yaml  puzzlebot_params.yaml  real_robot_params.yaml  triangle_params.yaml  world4_params.yaml
MiniChallenge6/puzzlebot_sim/config/dds/: cyclonedds_unicast.xml
MiniChallenge6/puzzlebot_sim/docs/: CHANGES_GRANT.md  HARDCODES_AUDIT.md  MICROROS_TROUBLESHOOTING.md
MiniChallenge6/puzzlebot_sim/launch/: bug0_launch.py  bug2_launch.py  demo_launch.py  final_challenge_launch.py  localisation_launch.py  mc6_bug0_launch.py  mc6_bug2_launch.py  puzzlebot_launch.py  real_robot_launch.py  sim_launch.py  test_aruco_launch.py  test_ekf_launch.py  test_nav_launch.py
MiniChallenge6/puzzlebot_sim/maps/: map_maze_real.pgm  map_maze_real.yaml
MiniChallenge6/puzzlebot_sim/puzzlebot_sim/: aruco_detector.py  aruco_ros_bridge.py  bug0.py  bug2.py  control.py  covariance_visualizer.py  ekf_localisation.py  joint_state_publisher.py  joint_to_encoders.py  localisation.py  mc3_aruco_node.py  mc3_bug2_node.py  mc3_joint_states.py  mc3_loc_node.py  mc3_puzzle_transforms.py  multi_point_nav.py  obstacle_avoidance.py  point_generator.py  scan_utils.py
MiniChallenge6/puzzlebot_sim/rviz/: final_challenge.rviz  puzzlebot_rviz.rviz
MiniChallenge6/puzzlebot_sim/urdf/: puzzlebot.urdf
MiniChallenge6/puzzlebot_sim/urdf/mcr2_control/: gazebo_control.xacro
MiniChallenge6/puzzlebot_sim/urdf/mcr2_robots/: puzzlebot_jetson_lidar_ed.xacro
MiniChallenge6/puzzlebot_sim/urdf/mcr2_sensors/: laser_camera_bracket.xacro  lidar.xacro
puzzlebot_sim/: README.md  package.xml  (+1 more)
(+18 files in other folders)
