<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>puzzlebot_sim</name>
  <version>0.0.0</version>
  <description>Puzzlebot Kinematic Sim</description>
  <maintainer email="mario.mtz@manchester-robotics.com">Mario Martinez</maintainer>
  <license>Apache-2.0</license>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>ros2launch</depend>
  <depend>tf2_ros_py</depend>
  <depend>python3-numpy</depend>
  <depend>python3-transforms3d</depend>
  <depend>python3-opencv</depend>
  <depend>cv_bridge</depend>
  <depend>puzzlebot_msgs</depend>
  <!-- aruco_ros_bridge importa aruco_msgs en runtime (la PC lo necesita):
       sudo apt install ros-humble-aruco-msgs -->
  <exec_depend>aruco_msgs</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <!-- real_robot_launch lanza el joint_state_publisher (no-gui) -->
  <exec_depend>joint_state_publisher</exec_depend>
  <depend>joint_state_publisher_gui</depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rqt_plot</exec_depend>
  <exec_depend>rqt_graph</exec_depend>
  <exec_depend>rqt_image_view</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
